feat: filter material profile with post request
